# cpp-test-generator

./: CMakeLists.txt  LICENSE  README.md  main.py  run.bat  run.sh  test.cpp
.github/workflows/: test.yml
input-code/: add.cpp  add.h
tests/: test_add.cpp
yaml-instructions/: instructions.yaml
